BUGFIX Fixed z-index of jquery.datepicker DIV element, which was hidden under the jquery.layout panels
git-svn-id: svn://svn.silverstripe.com/silverstripe/open/modules/cms/trunk@92627 467b73ca-7a2a-4603-9d3b-597d59a354a9

--- a/css/cms_right.css
+++ b/css/cms_right.css
@@ -489,3 +489,11 @@
 #Form_EditorToolbarLinkForm .field {
 	margin-left: 0;
 }
+
+/**
+ * jQuery UI Datepicker - necessary because of custom
+ * z-indexing performed in jQuery.layout
+ */
+#ui-datepicker-div {
+	z-index: 1002;
+}
